--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_script:
   - PKGS=$(go list ./... | grep -v /vendor/)             # All the import paths, excluding vendor/
   - go get github.com/golang/lint/golint                 # Linter
   - go get honnef.co/go/tools/cmd/megacheck              # Badass static analyzer/linter
+  - go get github.com/adamo57/grappos_api                # go gets the file
 
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
