--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,12 @@ before_script:
   - PKGS=$(go list ./... | grep -v /vendor/)             # All the import paths, excluding vendor/
   - go get github.com/golang/lint/golint                 # Linter
   - go get honnef.co/go/tools/cmd/megacheck              # Badass static analyzer/linter
-  - go get github.com/adamo57/grappos_api                # go gets the file
 
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
-  - test -z $(gofmt -s -l $GO_FILES)  # Fail if a .go file hasn't been formatted with gofmt
-  - go test -v -race ./...            # Run all the tests with the race detector enabled
-  - go vet -v ./...                   # go vet is the official Go static analyzer
-  - megacheck $PKGS                   # "go vet on steroids" + linter
-  - golint -set_exit_status $PKGS     # one last linter
+  - test -z $(gofmt -s -l $GO_FILES)              # Fail if a .go file hasn't been formatted with gofmt
+  - go test $(go list ./... | grep -v /vendor/)   # Run all the tests with the race detector enabled
+  - go vet -v ./...                               # go vet is the official Go static analyzer
+  - megacheck $(go list ./... | grep -v /vendor/) # "go vet on steroids" + linter
+  - golint -set_exit_status $PKGS                 # one last linter
