hopefully build is fixed

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ before_script:
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
-  - test -z $(gofmt -s -l $GO_FILES)              # Fail if a .go file hasn't been formatted with gofmt
-  - go test $(go list ./... | grep -v /vendor/)   # Run all the tests with the race detector enabled
-  - go vet -v ./...                               # go vet is the official Go static analyzer
-  - megacheck $(go list ./... | grep -v /vendor/) # "go vet on steroids" + linter
-  - golint -set_exit_status $PKGS                 # one last linter
+  - test -z $(gofmt -s -l $GO_FILES) # Fail if a .go file hasn't been formatted with gofmt
+  - go test ./...                    # Run all the tests with the race detector enabled
+  - go vet -v ./...                  # go vet is the official Go static analyzer
+  - megacheck ./...                  # "go vet on steroids" + linter
+  - golint -set_exit_status $PKGS    # one last linter
