--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,13 @@ notifications:
 # flunk the build and immediately stop. It's sorta like having
 # set -e enabled in bash. 
 before_script:
-  - GO_FILES=$(find . -iname '*.go' | grep -v /vendor/)  # All the .go files, excluding vendor/
   - PKGS=$(go list ./... | grep -v /vendor/)             # All the import paths, excluding vendor/
   - go get github.com/golang/lint/golint                 # Linter
 
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
-  - test -z $(gofmt -s -l $GO_FILES)                           # Fail if a .go file hasn't been formatted with gofmt
+  - diff -u <(echo -n) <(gofmt -d ./)                          # Fail if a .go file hasn't been formatted with gofmt
   - go test ./... -coverprofile=coverage.txt -covermode=atomic # Run all the tests with the race detector enabled
   - go vet -v ./...                                            # go vet is the official Go static analyzer
   - golint -set_exit_status $PKGS                              # one last linter
